<package format="2">
    <name>amcl</name>
    <version>3.1.0</version>
    <description>
        <p>
            amcl is a probabilistic localization system for a robot moving in
            2D. It implements the adaptive (or KLD-sampling) Monte Carlo
            localization approach (as described by Dieter Fox), which uses a
            particle filter to track the pose of a robot against a known map.
        </p>
        <p>
            This node is derived, with thanks, from Andrew Howard's excellent
            'amcl' Player driver.
        </p>
    </description>
    <url>http://wiki.ros.org/amcl</url>
    <author>Brian P. Gerkey</author>
    <author>contradict@gmail.com</author>
    <author email="davidvlu@gmail.com">David V. Lu!!</author>
    <author email="mferguson@fetchrobotics.com">Michael Ferguson</author>
    <maintainer email="dhood@osrfoundation.org">D. Hood</maintainer>
    <license>LGPL</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <!--
    <build_depend>rosbag</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>rostest</build_depend>
    -->
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rcutils</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>

    <!--
    <exec_depend>rosbag</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    -->
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rcutils</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

    <test_depend>map_server</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
